--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
                         <ul>
                             <li><span>BIOS: </span> <input type="file" id="bios_load" class="files"></li>
                             <li><span>Game: </span> <input type="file" id="rom_load" class="files"></li>
+			    <li><a href="https://github.com/taisel/IodineGBA">Credits to taisel for making IodineGBA</a></li>
                         </ul>
                     </li>
                     <li id="play" class="show">Play</li>
